fixed main x-overflow issue

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -1,11 +1,13 @@
 /****************************/
 /********* 1024px ~ 1070px */
-@media only screen and (min-device-width: 1024px) and (max-width: 1070px) {
+@media only screen and (max-width: 1070px) {
 	.left-panel {
 		height: 73px;
 		width: 100%;
 		background-color: #001b30;
 		position: fixed;
+		overflow-x: hidden;
+		overflow-y: hidden;
 		z-index: 999;
 	}
 
@@ -14,7 +16,6 @@
 		margin: 0;
 		padding: 0;
 		overflow-x: hidden;
-		overflow-y: hidden;
 	}
 
 	.my-photo {
@@ -36,7 +37,7 @@
 
 /***************************/
 /********* 768px ~ 1023px */
-@media only screen and (min-device-width: 768px) and (max-width: 1023px) {
+@media only screen and (max-width: 1023px) {
 	nav {
 		text-align: left;
 		padding-right: 0;
@@ -47,6 +48,7 @@
 		line-height: 100%;
 		padding: 20px 22px 20px 0;
 		font-size: 95% !important;
+		z-index: 999;
 	}
 
 	.section-basic-info { padding: 7% 5% }
@@ -67,7 +69,7 @@
 
 /**************************/
 /********* 481px ~ 767px */
-@media only screen and (min-device-width: 481px) and (max-width: 767px) {
+@media only screen and (max-width: 767px) {
 	body {
 		font-size: 85%;
 	}
@@ -169,7 +171,7 @@
 
 /*************************/
 /********* 320 ~ 480px */
-@media only screen and (min-device-width: 320px) and (max-width: 480px) {
+@media only screen and (max-width: 480px) {
 	body {
 		font-size: 70%;
 	}
